--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 	"dependencies": {
 		"@element-plus/icons-vue": "^2.0.9",
 		"axios": "^0.27.2",
+    	"d3": "^7.8.2",
+		"d3-dag": "^0.8.2",
 		"element-plus": "^2.2.14",
 		"md-editor-v3": "^2.2.1",
 		"pinia": "^2.0.20",
